[package]
name = "my_drbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.9"
generic-array = "0.14"
hmac = "0.9"
sha2 = "0.9"
typenum = "1.12"
rand = "0.8.5"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
sha2 = "0.9"
hex = "0.4"
typenum = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"