[package]
name = "rust_nist_drbg"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
generic-array = "0.14"
serde_json = "1"
typenum = "1.12"
hex = "0.4.3"
rand = "0.8.5"
digest = "0.9"
sha2 = "0.9"
hmac = "0.9"
aes = "0.8.2"
des = "0.8.1"
chrono = "0.4.24"